<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dp"
    android:background="@drawable/tricolorrrr"
    tools:context=".QuestionNo4">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout2"
        android:layout_width="294dp"
        android:layout_height="170dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="72dp"
        android:animateLayoutChanges="true"
        android:background="@drawable/border"
        android:backgroundTint="#FBFBFB"
        android:backgroundTintMode="add"
        android:foregroundTint="#00BCD4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.167">

        <!-- Set the text and text color as per your preference -->

        <TextView
            android:id="@+id/textView2"
            android:layout_width="266dp"
            android:layout_height="156dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="6dp"
            android:fontFamily="@font/alfa_slab_one"
            android:text="@string/app_4thQuestion"
            android:textAlignment="center"
            android:textColor="#0004FF"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.375"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RadioGroup
        android:id="@+id/txtRadioGroup"
        android:layout_width="235dp"
        android:layout_height="403dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout2">

        <RadioButton
            android:id="@+id/a_il"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"

            android:background="@drawable/radio_button_background"
            android:backgroundTint="#FBF3A8"
            android:text="@string/app_4A"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/b_ee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/radio_button_background"

            android:backgroundTint="#FBF3A8"
            android:text="@string/app_4B"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/c_sam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/radio_button_background"
            android:backgroundTint="#FBF3A8"
            android:text="@string/app_4C"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/d_sa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/radio_button_background"
            android:backgroundTint="#FBF3A8"
            android:text="@string/app_4D"
            android:textSize="20sp" />

    </RadioGroup>

    <Button
        android:id="@+id/NextBtn"
        android:layout_width="127dp"
        android:layout_height="64dp"
        android:backgroundTint="#FD0008"
        android:text="@string/app_Next"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.881"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.833" />
    <TextView
        android:id="@+id/txtQuestionNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="684dp"
        android:text="4/10"
        android:textColor="#022BFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.828"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/CongratsOrTryAgain"
        tools:ignore="NotSibling" />
</androidx.constraintlayout.widget.ConstraintLayout>
